--- a/public/style/styles.css
+++ b/public/style/styles.css
@@ -1,8 +1,8 @@
 body {
-background: #e5e6e6;
-font-family: 'Gotham'; 
-font-weight: 400; 
-font-style: normal;
+	background: #e5e6e6;
+	font-family: 'Gotham'; 
+	font-weight: 400; 
+	font-style: normal;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -11,10 +11,10 @@ h1, h2, h3, h4, h5, h6 {
 	text-transform: uppercase;
 }
 h1{
-color: #fff;
-font-weight: 700; 
-padding: 20px 15px 0px 15px;
-font-size: 18px;
+	color: #fff;
+	font-weight: 700; 
+	padding: 20px 15px 0px 15px;
+	font-size: 18px;
 }
 
 h2	{
@@ -32,7 +32,10 @@ h3	{
 	float: left;
 }
 
-
+thead {
+	font-size: 1.25em;
+	color: white;
+}
 
 .clr {clear:both;}
 
@@ -52,10 +55,9 @@ h3	{
 	width: 465px;
 }
 #blue{
- background: #009bd9;
- height: 350px;
- width: 440px;
- float: left;
+	 background: #009bd9;
+	 height: 350px;
+	 float: left;
 }
 
 #mbym {
@@ -100,20 +102,20 @@ h3	{
 }
 
 
-
-#stat1, #stat2, #stat3, #stat4 {
-clear: right;
-font-size: 37px;
-color: #fff;
-display:inline-block;
+#stat1, #stat2, #stat3, #stat4, #weeklyStat1, #weeklyStat2, #weeklyStat3, #weeklyStat4 {
+	clear: right;
+	font-size: 37px;
+	color: #fff;
+	display:inline-block;
 }
 
-#stat1, #stat3 {
+
+
+#stat1, #stat3, #weeklyStat1, #weeklyStat3 {
 	margin-left: 15px;
 }
 
 #calendar{
-	background-image: url('../images/cal.jpg');
 	width: 170px;
 	height: 170px;
 	margin-right: auto;
@@ -135,7 +137,7 @@ display:inline-block;
 
 .my-chart {
 	height: 280px;
-	width:750px;
+	width: 700px;
 }
 
 #realtime-chart .layer-1 {
@@ -147,6 +149,6 @@ display:inline-block;
 }
 
 @font-face {
-font-family: Gotham;
-src: url("style/public/fonts/Gotham-Book.otf") format("opentype");
+	font-family: Gotham;
+	src: url("style/public/fonts/Gotham-Book.otf") format("opentype");
 }
